# markello_transcriptome

./: .gitattributes  .gitignore  .zenodo.json  Makefile  README.md  environment.yml  index.html
container/: README.md  gen_simg.sh
data/: README.md
data/derivatives/: impact.csv
data/derivatives/literature/: analysis.csv  anderson2018.h5  anderson2020.h5  burt2018.h5  french2015.h5  hawrylycz2015.h5  krienen2016.h5  liu2020.h5  romerogarcia2018.h5  whitakervertes2016.h5
data/raw/dk/fslr32k/: atlas-desikankilliany_space-fsLR_den-32k_hemi-L_dparc.label.gii  atlas-desikankilliany_space-fsLR_den-32k_hemi-R_dparc.label.gii
data/raw/gene_modules/: oldham2008.xls
manuscript/: main.tex  refs.bib
scripts/: README.md  aggregate_analyses.py  batch_analysis.py  batch_pipeline.py  compute_parameter_impact.py  generate_parameters.py  run_literature_pipelines.py  visualization.py  visualization_literature.py
vibecheck/: README.md  setup.cfg  setup.py
vibecheck/vibecheck/: abautils.py  analysis.py  plotting.py
walkthrough/: README.md  conf.py  index.md  processing.md  setting_up.md
