[metadata]
name = vibecheck
url = https://github.com/netneurolab/markello_transcriptome/blob/master/vibecheck
download_url = https://github.com/netneurolab/markello_transcriptome/blob/master/vibecheck
author = Ross Markello
maintainer = Ross Markello
maintainer_email = rossmarkello+coding@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7
license = BSD-3
description = A toolbox in support of Markello et al., 2021
long_description = A toolbox in support of Markello et al., 2021
long_description_content_type = text/markdown
platforms = OS Independent
provides =
    vibecheck

[options]
python_requires = >=3.7
install_requires =
    netneurotools
    nibabel
    numpy
    scipy
tests_require =
    pytest >=3.6
test_suite = pytest
zip_safe = False
packages = find:
include_package_data = True

[flake8]
doctests = True
exclude =
    *build/
    *sphinx*
    */__init__.py
ignore = W503, E402
max-line-length = 79

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE
xfail_strict = true
addopts = -rx
